--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -23,6 +23,8 @@
 <script
 	src=https://ajax.googleapis.com/ajax/libs/angularjs/1.2.8/angular-route.js></script>
 <script
+	src=https://ajax.googleapis.com/ajax/libs/angularjs/1.2.8/angular-sanitize.js></script>
+<script
 	src=https://ajax.googleapis.com/ajax/libs/angularjs/1.2.8/angular-cookies.js></script>
 <script
 	src=https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/2.3.2/js/bootstrap.min.js></script>
