--- a/WebContent/solar/html/parent.html
+++ b/WebContent/solar/html/parent.html
@@ -37,7 +37,7 @@
 	</div>
 	<div ng-if="reservationEnd" class="alert alert-g"
 		style="width: 50%; margin-left: 25%; margin-top: 20px">
-		{{'solar.reservation.end'|i18n}}.</div>
+		{{'solar.reservation.end'|i18n}}</div>
 	<div class="animate-show alert alert-g" ng-if="notAuthorized"
 		style="width: 40%; margin-left: 30%; margin-top: 20px">
 		{{'solar.reservation.login'|i18n}}...</div>
